--- a/src/files/rosetta-stone/css/rosetta.css
+++ b/src/files/rosetta-stone/css/rosetta.css
@@ -3,8 +3,9 @@ Fontgeek Fact:
 Gill of Gill Sans fame was a student of Edward Johnston, who almost single-handedly
 resurrected the art of illumination and calligraphy.
 */
+
 body {
-  background: #fff;
+  background: #FFF;
   color: #333;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 14px;
@@ -12,28 +13,50 @@ body {
 }
 
 a {
-  color: #33d;
+  color: #33D;
   text-decoration: none;
 }
 
-a:hover { text-decoration: underline; }
+a:hover {
+    text-decoration: underline;
+}
 
 code, pre {
   font-family: consolas, menlo, 'bitstream vera sans mono', monaco, monospace;
   font-size: 12px;
 }
 
-code, pre, p { line-height: 1.4; }
+code, pre, p {
+    line-height: 1.4;
+}
 
-h1 { margin: 0 0 1em; }
-h2 { margin: 1.5em 0 0.5em; }
+h1 {
+    margin: 0 0 1em;
+}
 
-h1 { font-size: 24px; }
-h2 { font-size: 20px; }
-h3 { font-size: 16px; }
+h2 {
+    margin: 1.5em 0 0.5em;
+}
 
-pre { margin: 0; }
-pre.code i { color: #666; }
+h1 {
+    font-size: 24px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+h3 {
+    font-size: 16px;
+}
+
+pre {
+    margin: 0;
+}
+
+pre.code i {
+    color: #666;
+}
 
 table {
   border-collapse: collapse;
@@ -43,21 +66,30 @@ table {
 }
 
 td {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #DDD;
   vertical-align: top;
 }
 
-td, th { padding: 8px 14px; }
+td, th {
+    padding: 8px 14px;
+}
 
-td.code { width: 20%; }
+td.code {
+    width: 20%;
+}
 
 td.notes {
-  background: #f2f2f2;
+  background: #F2F2F2;
   width: 40%;
 }
 
-td.notes p:first-child { margin-top: 0; }
-td.notes p:last-child { margin-bottom: 0; }
+td.notes p:first-child {
+    margin-top: 0;
+}
+
+td.notes p:last-child {
+    margin-bottom: 0;
+}
 
 th {
   border-bottom: 1px solid #666;
@@ -66,18 +98,40 @@ th {
   text-align: left;
 }
 
-.nowrap { white-space: nowrap; }
+.nowrap {
+    white-space: nowrap;
+}
 
-.jq { color: #900; }
-.yui { color: #009; }
-.aui { color: #446D77; }
+.aui {
+    color: #446D77;
+}
 
-.printonly { display: none; }
+.jq {
+    color: #900;
+}
 
-.toc { font-size: 16px; }
+.yui {
+    color: #009;
+}
+
+.printonly {
+    display: none;
+}
+
+.toc {
+    font-size: 16px;
+}
 
 @media print {
-  body { margin: 0; }
-  .printonly { display: block; }
-  .screenonly { display: none; }
+    body {
+        margin: 0;
+    }
+
+    .printonly {
+        display: block;
+    }
+
+    .screenonly {
+        display: none;
+    }
 }
